[FIX] - Banner Text Spacing

--- a/css/ltr.css
+++ b/css/ltr.css
@@ -148,7 +148,7 @@
 
 @media (min-width: 1024px) {
   .cohen-banner-2 .text {
-    width: 37%;
+    width: 38%;
   }
 }
 
